# prove-it-hackaton

./: .env.example  .gitignore  AGENTS.md  Proba.md  README.md  Teo.txt  all_code.txt  branch-test-zaha.txt  bridge.py  codebase_completa.txt  config.py  ingest_history.py  main.py  pyproject.toml  requirements.txt  run_live_pipeline.py  server.py  tot_codul.txt  user.json
app/: main.py
app/change/: models.py  router.py  service.py
app/core/: dependencies.py
app/macro/: __init__.py  models.py  router.py  service.py
app/mcp/: models.py  router.py  service.py
app/price/: models.py  router.py  service.py
app/sentiment/: models.py  router.py  service.py
charts/: __init__.py  chart_engine.py  chart_widget.py  indicators.py  panel_chart.py  world_map_engine.py  world_map_widget.py
config/: .env.example
data/: ai_engine.py  backend_client.py  macro_insight_text.py  market.py  mock_data.py  news.py  user_manager.py
models/: gold_xgb_7d.pkl  oil_xgb_7d.pkl  xgboost_COPPER.pkl  xgboost_GOLD.pkl  xgboost_NATURAL_GAS.pkl  xgboost_OIL.pkl  xgboost_SILVER.pkl  xgboost_WHEAT.pkl
scripts/: commodity_data_engineering_pipeline.py  populate_vector_db.py  start_research_agent.py  test_backend_integration.py  train_xgboost_gpu.py
src/backtest/: __init__.py  engine.py  metrics.py  simulator.py
src/data/: __init__.py  config.py  vector_schema.py
src/data/api/: __init__.py  data_api.py  strategy_api.py
src/data/clients/: __init__.py  deepseek_client.py  newsapi_client.py  yfinance_client.py
src/data/ingestion/: __init__.py  embedding_utils.py  enhanced_ingestor.py  prediction_tracker.py  time_series_ingestor.py
src/data/models/: __init__.py  commodity.py  insight.py  news.py  price.py
src/data/pipeline/: __init__.py  live_scheduler.py  orchestrator.py  realtime_ingestor.py
src/data/pipelines/: __init__.py
src/data/services/: __init__.py  insight_service.py  news_service.py  price_service.py  vector_store.py
src/emergency/: __init__.py  detector.py  responder.py  strategies.py
src/features/: __init__.py  xgboost_features.py
src/ml/: __init__.py  chain_of_thought.py  consensus_engine.py  feature_explainer.py  prediction_service.py  presentation.py  validation_display.py  xgboost_trainer.py
src/rl/: __init__.py  deep_researcher.py  ollama_client.py  outcome_tracker.py  rag_retriever.py  reasoning_weights.py
src/strategy/: __init__.py  generator.py  scorer.py  validator.py
tests/: __init__.py  test_data_api.py  test_models.py
tests/change/: test_service.py
tests/macro/: test_router.py
tests/mcp/: test_service.py
tests/price/: test_router.py  test_service.py
tests/sentiment/: test_service.py
ui/: benchmark_page.py  dialog_profile.py  macro_map.py  main_window.py  panel_ai.py  panel_news.py  report_generator.py  sidebar.py  stress_test_simulator.py
ui/styles/: __init__.py  theme.py
