[project]
name = "ai-commodity-analyzer"
version = "0.1.0"
description = "AI Commodity Price Intelligence Platform"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    # UI
    "PyQt6>=6.6.0",
    "pyqt6-sip>=13.6.0",
    "PyQt6-WebEngine>=6.6.0",
    "pyqtdarktheme>=2.1.0",
    "plotly>=5.18.0",
    # Backend API server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Data & ML
    "yfinance>=0.2.50",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "ta>=0.11.0",
    # AI
    "openai>=1.0.0",
    # Sentiment analysis
    "vaderSentiment>=3.3.2",
    # Vector DB
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.12.0",
    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[tool.uv]
environments = ["sys_platform != 'win32'"]
